# tptp-parser

./: .gitignore  README.md  build.sh  generate-parser.sh  run-parser-python3.sh  run-parser.sh  test-cpp-parser.sh  test-parser.sh  trim-problem.sh
problems/: HL400001+1.p  HL400001+1_simp.p  HL400001+2.p  HL400001^1.p  HL400001^2.p  HL400001^3.p  HL400001_1.p  HL400001_2.p  PT_lambda^3.p  SYN036^7.p  fof.p  thf.p
python3/: README.md  setup.py
python3/tptp_parser/: __main__.py
src/cpp/: CMakeLists.txt  tptp.ast.cc  tptp.ast.hh  tptp.lexer.cc  tptp.parser.cc  tptp.parser.i  tptp.test.cc  tptp.yy
src/python3/: README.md  test_run.py
src/python3/tptp_parser/: __init__.py
syntax-reference/: tptp_syntax_7201.bnf
tptp-parser/: Makefile.parser  tptp  tptp.ast.cc  tptp.ast.hh  tptp.ll  tptp.parser.hh  tptp.parser.i  tptp.yy
tptp-parser-cpp/: Makefile.parser  tptp.ast.cc  tptp.ast.hh  tptp.driver.cc  tptp.driver.hh  tptp.grammar.cc  tptp.grammar.hh  tptp.ll  tptp.parser.cc  tptp.parser.hh  tptp.parser.i  tptp.test.cc  tptp.yy
